--- a/style.css
+++ b/style.css
@@ -1,21 +1,42 @@
+:root {
+  --rowNum: 16;
+  --colNum: 16;
+}
+
 #container {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
-    grid-template-rows:  auto auto;
-    background-color: red;
-    padding: 80px;
+    grid-template-columns: repeat(var(--rowNum), minmax(0px, 1fr));
+    grid-template-rows:  repeat(var(--colNum), minmax(0px, 1fr));
+    position: relative;
   }
+  
   .grid-item {
-    background-color:grey;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    background-color:white;
+    border: 1px solid black;
     padding: 15px;
-    font-size: 30px;
-    text-align: center;
-    
   }
 
-  .grid-item:hover {
-    background-color: white;
-    cursor: pointer;
+  main {
+    grid-area: main;
+    grid-column: 2 / 3;
+    grid-row: 2 / 5;
+}
 
-  }
+.grid {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr auto 1fr;
+  justify-content: center;
+}
+body{
+  background-color: red;
+}
+
+h1{
+  color: gold;
+  font-style: italic;
+}
+
+
+  
+  
